# Open-Upload

./: LICENSE  README.md
backend/: Dockerfile  auth.py  database.db  database.py  main.py  makefile  models.py  pyproject.toml  requirements.txt
backend/db/: database.db
backend/firebase/: firebase_credentials.py
backend/helpers/: Firebase_helpers.py
backend/migrations/: env.py
backend/migrations/versions/: 459a91bcbf61_add_name_field_to_apikey_table.py
backend/routes/: api_keys.py  base.py  files.py  projects.py  usage.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: api-keys.tsx  auth-redirect.tsx  create-project-button.tsx  dashboard-header.tsx  file-list.tsx  login-form.tsx  project-list.tsx  project-settings.tsx  signup-form.tsx  upload-limits.tsx  uploader.tsx
frontend/components/ui/: date-picker.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: actions.ts  apiClient.ts  firebase.ts
gobackend/: .env  .gitignore  BACKUP_CONFIG.md  Dockerfile  MINIO_STORAGE_EXPANSION.md  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  go.mod  go.sum  openapi.json
gobackend/cmd/server/: main.go
gobackend/db/: database.db
gobackend/internal/auth/: apikey.go  db_user.go  firebase.go  middleware.go
gobackend/internal/config/: app.go  config.go  minio.go
gobackend/internal/db/: db.go  migrate.go  models.go
(+9 files in other folders)
